@@ -752,7 +752,12 @@ command to generate the output files.
       <match type="string" value="WPC" offset="1"/>
       <!-- <match type="big32" value="0xff575053c405" offset="0"/> -->
     </magic>
+    <glob pattern="*.wp"/>
+    <glob pattern="*.wp4"/>
+    <glob pattern="*.wp5"/>
+    <glob pattern="*.wp6"/>
     <glob pattern="*.wpd"/>
+    <glob pattern="*.wpp"/>
   </mime-type>
   <mime-type type="application/x-xbel">
     <sub-class-of type="application/xml"/>
@@ -3057,7 +3062,7 @@ command to generate the output files.
     <glob pattern="*.cur"/>
   </mime-type>
   <mime-type type="image/x-emf">
-    <_comment>EMF document</_comment>
+    <_comment>EMF image</_comment>
     <acronym>EMF</acronym>
     <expanded-acronym>Enhanced MetaFile</expanded-acronym>
     <glob pattern="*.emf"/>
@@ -3072,7 +3077,7 @@ command to generate the output files.
     </magic>
   </mime-type>
   <mime-type type="image/x-wmf">
-    <_comment>WMF document</_comment>
+    <_comment>WMF image</_comment>
     <acronym>WMF</acronym>
     <expanded-acronym>Windows Metafile</expanded-acronym>
     <magic priority="50">
